--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,61 +1,46 @@
-altgraph==0.10.2
-autoenv==1.0.0
-bdist-mpkg==0.5.0
-bonjour-py==0.3
-Django==1.10.5
-django-crispy-forms==1.6.1
-django-filter==1.0.1
-djangorestframework==3.5.4
-drfdocs==0.0.11
-macholib==1.5.1
-matplotlib==1.3.1
-modulegraph==0.10.4
-numpy==1.8.0rc1
-py2app==0.7.3
-pycountry==18.2.23
-pyobjc-core==2.5.1
-pyobjc-framework-Accounts==2.5.1
-pyobjc-framework-AddressBook==2.5.1
-pyobjc-framework-AppleScriptKit==2.5.1
-pyobjc-framework-AppleScriptObjC==2.5.1
-pyobjc-framework-Automator==2.5.1
-pyobjc-framework-CFNetwork==2.5.1
-pyobjc-framework-Cocoa==2.5.1
-pyobjc-framework-Collaboration==2.5.1
-pyobjc-framework-CoreData==2.5.1
-pyobjc-framework-CoreLocation==2.5.1
-pyobjc-framework-CoreText==2.5.1
-pyobjc-framework-DictionaryServices==2.5.1
-pyobjc-framework-EventKit==2.5.1
-pyobjc-framework-ExceptionHandling==2.5.1
-pyobjc-framework-FSEvents==2.5.1
-pyobjc-framework-InputMethodKit==2.5.1
-pyobjc-framework-InstallerPlugins==2.5.1
-pyobjc-framework-InstantMessage==2.5.1
-pyobjc-framework-LatentSemanticMapping==2.5.1
-pyobjc-framework-LaunchServices==2.5.1
-pyobjc-framework-Message==2.5.1
-pyobjc-framework-OpenDirectory==2.5.1
-pyobjc-framework-PreferencePanes==2.5.1
-pyobjc-framework-PubSub==2.5.1
-pyobjc-framework-QTKit==2.5.1
-pyobjc-framework-Quartz==2.5.1
-pyobjc-framework-ScreenSaver==2.5.1
-pyobjc-framework-ScriptingBridge==2.5.1
-pyobjc-framework-SearchKit==2.5.1
-pyobjc-framework-ServiceManagement==2.5.1
-pyobjc-framework-Social==2.5.1
-pyobjc-framework-SyncServices==2.5.1
-pyobjc-framework-SystemConfiguration==2.5.1
-pyobjc-framework-WebKit==2.5.1
-pyOpenSSL==0.13.1
-pyparsing==2.0.1
-python-dateutil==1.5
+appdirs==1.4.3
+asn1crypto==0.24.0
+certifi==2018.1.18
+cffi==1.11.4
+chardet==3.0.4
+click==6.7
+cryptography==2.1.4
+cycler==0.10.0
+decorator==4.0.11
+dnspython==1.15.0
+docutils==0.14
+enum34==1.1.6
+Flask==0.12.2
+functools32==3.2.3.post2
+geoip2==2.7.0
+idna==2.6
+ipaddr==2.2.0
+ipaddress==1.0.19
+ipwhois==1.0.0
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
+matplotlib==2.0.0
+maxminddb==1.3.0
+networkx==1.11
+numpy==1.12.1
+packaging==16.8
+pycountry==17.9.23
+pycparser==2.18
+PyJWT==1.5.3
+pyOpenSSL==17.5.0
+pyparsing==2.2.0
+python-dateutil==2.6.0
 python-geoip==1.2
 python-geoip-geolite2==2015.303
-pytz==2013.7
-scipy==0.13.0b1
-six==1.4.1
+pytz==2017.2
+requests==2.18.4
+scipy==1.0.0
+six==1.10.0
+statistics==1.0.3.5
+subprocess32==3.2.7
+twilio==6.10.2
+urllib3==1.22
 virtualenv==15.1.0
-xattr==0.6.4
-zope.interface==4.1.1
+Werkzeug==0.12.2
+googlemaps
