--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,24 @@
-appdirs==1.4.3
 asn1crypto==0.24.0
 certifi==2018.1.18
 cffi==1.11.4
 chardet==3.0.4
 click==6.7
 cryptography==2.1.4
-cycler==0.10.0
-decorator==4.0.11
-dnspython==1.15.0
-docutils==0.14
 enum34==1.1.6
 Flask==0.12.2
-functools32==3.2.3.post2
-geoip2==2.7.0
+googlemaps==2.5.1
+gunicorn==19.7.1
 idna==2.6
-ipaddr==2.2.0
 ipaddress==1.0.19
-ipwhois==1.0.0
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2==2.10
 MarkupSafe==1.0
-matplotlib==2.0.0
-maxminddb==1.3.0
-networkx==1.11
-numpy==1.12.1
-packaging==16.8
-pycountry==17.9.23
 pycparser==2.18
 PyJWT==1.5.3
 pyOpenSSL==17.5.0
-pyparsing==2.2.0
-python-dateutil==2.6.0
-python-geoip==1.2
-python-geoip-geolite2==2015.303
-pytz==2017.2
+pytz==2017.3
 requests==2.18.4
-scipy==1.0.0
-six==1.10.0
-statistics==1.0.3.5
-subprocess32==3.2.7
-twilio==6.10.2
+six==1.11.0
+twilio==6.0.0
 urllib3==1.22
-virtualenv==15.1.0
-Werkzeug==0.12.2
-googlemaps
+Werkzeug==0.14.1
