--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,7 @@ asn1crypto==0.24.0
 certifi==2018.1.18
 cffi==1.11.4
 chardet==3.0.4
+chromedriver-installer==0.0.6
 click==6.7
 cryptography==2.1.4
 cycler==0.10.0
