--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
         <activity android:name=".LoadingActivity" />
         <activity android:name=".MapActivity"></activity>
+        <activity android:name=".SelectionActivity"></activity>
     </application>
 
 </manifest>
